fixes benign smart features

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment these to install required packages\n",
     "# activate virtual environment\n",
     "# !source .venv/bin/activate\n",
     "# # install necessary packages\n",
@@ -68,13 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# finds .env file and loads the vars\n",
     "load_dotenv()\n",
-    "openai_api_key = os.getenv(\"OPENAI_API_KEY\", \"Key not found\")"
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\", \"Key not found\")\n",
+    "openai_org = os.getenv(\"OPENAI_ORG\", \"Organization not found\")"
    ]
   },
   {
@@ -2208,11 +2210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "benign_smart = SmartDataframe(df=pd.DataFrame(benign_cleaned_df), config={\"llm\": llm})\n",
+    "benign_smart = SmartDataframe(df=pd.DataFrame(benign_df), config={\"llm\": llm})\n",
     "benign_smart_features = benign_smart.generate_features()"
    ]
   },
@@ -2495,16 +2497,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Source IP</th>\n",
+       "      <th>Destination IP</th>\n",
+       "      <th>Source Port</th>\n",
+       "      <th>Destination Port</th>\n",
+       "      <th>Payload</th>\n",
+       "      <th>Packet Length</th>\n",
+       "      <th>Protocol</th>\n",
+       "      <th>Total Length</th>\n",
+       "      <th>Source IP Length</th>\n",
+       "      <th>Destination IP Length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1241422456.122475</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1241422456.122475</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1241422758.60905</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1241422758.60905</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1355253962.658551</td>\n",
+       "      <td>10.0.0.1</td>\n",
+       "      <td>224.0.0.2</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>42</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38637</th>\n",
+       "      <td>1671112304.885062</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>43398.0</td>\n",
+       "      <td>Radius</td>\n",
+       "      <td>502</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>508</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38638</th>\n",
+       "      <td>1671112304.921208</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>43398.0</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>Radius</td>\n",
+       "      <td>225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>231</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38639</th>\n",
+       "      <td>1671112304.926982</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>43398.0</td>\n",
+       "      <td>Radius</td>\n",
+       "      <td>127</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>133</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38640</th>\n",
+       "      <td>1671112304.950305</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>43398.0</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>Radius</td>\n",
+       "      <td>180</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>186</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38641</th>\n",
+       "      <td>1671112304.954635</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>43398.0</td>\n",
+       "      <td>Radius</td>\n",
+       "      <td>179</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>185</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38642 rows × 11 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'Unfortunately, I was not able to answer your question, because of the following error:\\n\\nsequence item 0: expected str instance, int found\\n'"
+       "               Timestamp Source IP Destination IP  Source Port  \\\n",
+       "0      1241422456.122475      None           None          NaN   \n",
+       "1      1241422456.122475      None           None          NaN   \n",
+       "2       1241422758.60905      None           None          NaN   \n",
+       "3       1241422758.60905      None           None          NaN   \n",
+       "4      1355253962.658551  10.0.0.1      224.0.0.2        646.0   \n",
+       "...                  ...       ...            ...          ...   \n",
+       "38637  1671112304.885062      None           None       1812.0   \n",
+       "38638  1671112304.921208      None           None      43398.0   \n",
+       "38639  1671112304.926982      None           None       1812.0   \n",
+       "38640  1671112304.950305      None           None      43398.0   \n",
+       "38641  1671112304.954635      None           None       1812.0   \n",
+       "\n",
+       "       Destination Port Payload  Packet Length  Protocol  Total Length  \\\n",
+       "0                   NaN     Raw             60       NaN            63   \n",
+       "1                   NaN     Raw             60       NaN            63   \n",
+       "2                   NaN     Raw             60       NaN            63   \n",
+       "3                   NaN     Raw             60       NaN            63   \n",
+       "4                 646.0     Raw             42      17.0            45   \n",
+       "...                 ...     ...            ...       ...           ...   \n",
+       "38637           43398.0  Radius            502       NaN           508   \n",
+       "38638            1812.0  Radius            225       NaN           231   \n",
+       "38639           43398.0  Radius            127       NaN           133   \n",
+       "38640            1812.0  Radius            180       NaN           186   \n",
+       "38641           43398.0  Radius            179       NaN           185   \n",
+       "\n",
+       "       Source IP Length  Destination IP Length  \n",
+       "0                     4                      4  \n",
+       "1                     4                      4  \n",
+       "2                     4                      4  \n",
+       "3                     4                      4  \n",
+       "4                     8                      9  \n",
+       "...                 ...                    ...  \n",
+       "38637                 4                      4  \n",
+       "38638                 4                      4  \n",
+       "38639                 4                      4  \n",
+       "38640                 4                      4  \n",
+       "38641                 4                      4  \n",
+       "\n",
+       "[38642 rows x 11 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2784,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -2845,7 +3078,7 @@
        "192.168.2.115      13486"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,27 +4438,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "# use a subset because this takes loooong!\n",
-    "X_llm = payloads[\"Payload\"].head(20)\n",
-    "y_llm = payloads[\"Labels\"].head(20)"
+    "X_llm = payloads[\"Payload\"].head(50)\n",
+    "y_llm = payloads[\"Labels\"].head(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20,)"
+       "(50,)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4236,44 +4469,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "SKLLMConfig.set_openai_key(openai_api_key)\n",
-    "SKLLMConfig.set_openai_org(\"org-HlcxSARQUphcO0tUGmtJJOpD\")"
+    "SKLLMConfig.set_openai_org(openai_org)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: DynamicFewShotGPTClassifier errors out, why?\n",
-    "# def ai_classify(classifier, X, Y):\n",
-    "#     classifier.fit(X, y)\n",
-    "#     labels = classifier.predict(X)\n",
-    "#     return labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:16<00:00,  1.24it/s]"
+      "100%|██████████| 50/50 [00:29<00:00,  1.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.90\n"
+      "Accuracy: 0.76\n"
      ]
     },
     {
@@ -4294,21 +4514,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.40it/s]"
+      "100%|██████████| 50/50 [00:50<00:00,  1.00s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.95\n"
+      "Accuracy: 0.84\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = ZeroShotGPTClassifier(openai_model=\"gpt-4\")\n",
+    "clf.fit(X_llm, y_llm)\n",
+    "labels = clf.predict(X_llm)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:32<00:00,  1.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.82\n"
      ]
     },
     {
@@ -4329,15 +4584,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:32<00:00,  4.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.88\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# clf = DynamicFewShotGPTClassifier(openai_model=\"gpt-3.5-turbo\")\n",
-    "# clf.fit(X_llm, y_llm)\n",
-    "# labels = clf.predict(X_llm)\n",
+    "clf = FewShotGPTClassifier(openai_model=\"gpt-4\")\n",
+    "clf.fit(X_llm, y_llm)\n",
+    "labels = clf.predict(X_llm)\n",
     "\n",
-    "# print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
+    "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
    ]
   }
  ],
