--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -4242,18 +4242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add labels, 0 for benign, 1 for malicious\n",
-    "mirai_cleaned_df[\"Labels\"] = 1\n",
-    "benign_clean_df[\"Labels\"] = 0"
+    "mirai_cleaned_df[\"Labels\"] = \"malicious\"\n",
+    "benign_clean_df[\"Labels\"] = \"benign\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4263,7 +4263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4272,7 +4272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4282,7 +4282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4293,7 +4293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -4302,7 +4302,7 @@
        "(50,)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4313,7 +4313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4323,21 +4323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:35<00:00,  1.41it/s]"
+      "100%|██████████| 50/50 [00:42<00:00,  1.17it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.86\n"
+      "Accuracy: 0.32\n"
      ]
     },
     {
@@ -4358,21 +4358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:55<00:00,  1.12s/it]"
+      "100%|██████████| 50/50 [01:00<00:00,  1.20s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.84\n"
+      "Accuracy: 0.42\n"
      ]
     },
     {
@@ -4393,21 +4393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:37<00:00,  1.34it/s]"
+      "100%|██████████| 50/50 [00:39<00:00,  1.26it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.92\n"
+      "Accuracy: 0.82\n"
      ]
     },
     {
@@ -4428,7 +4428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.90\n"
+      "Accuracy: 0.82\n"
      ]
     },
     {
@@ -4458,6 +4458,63 @@
     "clf.fit(X_llm, y_llm)\n",
     "labels = clf.predict(X_llm)\n",
     "\n",
+    "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created new file. FILE_ID = file-TeYU3bMdo7nzwuaFYdW8LP6g\n",
+      "Waiting for file to be processed ...\n",
+      "Created new tuning job. JOB_ID = ftjob-sHgEEfrwBcpcjh1VKv8KfkI7\n",
+      "[2023-11-29 18:15:16.012128] Waiting for tuning job to complete. Current status: validating_files\n",
+      "[2023-11-29 18:17:16.236494] Waiting for tuning job to complete. Current status: running\n",
+      "[2023-11-29 18:19:17.014609] Waiting for tuning job to complete. Current status: running\n",
+      "[2023-11-29 18:21:17.318952] Waiting for tuning job to complete. Current status: running\n",
+      "Finished training. Number of trained tokens: 27126.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:22<00:00,  2.20it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skllm.models.gpt import GPTClassifier\n",
+    "\n",
+    "clf = GPTClassifier(\n",
+    "        base_model = \"gpt-3.5-turbo-0613\",\n",
+    "        n_epochs = None, # int or None. When None, will be determined automatically by OpenAI\n",
+    "        default_label = \"Random\", # optional\n",
+    ")\n",
+    "\n",
+    "clf.fit(X_llm, y_llm) # y_train is a list of labels\n",
+    "labels = clf.predict(X_llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.80\n"
+     ]
+    }
+   ],
+   "source": [
     "print(f\"Accuracy: {accuracy_score(y_llm, labels):.2f}\")"
    ]
   },
